--- a/hatom.html
+++ b/hatom.html
@@ -74,11 +74,11 @@
         <div class="portfolio" style="background-image:url(tpoX.png);"></div>
     </div>
     <div class="second">
-        <div class="container">
-            <div class="portfolio" style="background-image:url(Android\ Large\ -\ 1\ \(2\).png);"></div>
-            <div class="portfolio" style="background-image:url(PSM.png);"></div>
-            <div class="portfolio" style="background-image:url(fmttm.png);"></div>
-            <div class="portfolio" style="background-image:url(esy.png);"></div>
+        <div class="container2">
+            <div class="portfolio2" style="background-image:url(Android\ Large\ -\ 1\ \(2\).png);"></div>
+            <div class="portfolio2" style="background-image:url(PSM.png);"></div>
+            <div class="portfolio2" style="background-image:url(fmttm.png);"></div>
+            <div class="portfolio2" style="background-image:url(esy.png);"></div>
         </div>
     </div>
 
