--- a/hatom.html
+++ b/hatom.html
@@ -66,6 +66,10 @@
         </div>
     </div>
 
+    <div class="second">
+        <div class="intro" style="background-image:url(cardark.png);"></div>       
+    </div>
+
 
     <div class="container">
         <div class="portfolio" style="background-image:url(HATOM\ \(1\).png);"></div>
