--- a/hatom.html
+++ b/hatom.html
@@ -67,7 +67,9 @@
     </div>
 
     <div class="second">
-        <div class="intro" style="background-image:url(cardark.png);"></div>       
+        <p2>Contents</p2>
+        <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - website designing<br><br>4 - photography</h2>
+        <div class="intro" style="background-image:url(cardark.png);"></div>      
     </div>
 
 
