--- a/hatom.html
+++ b/hatom.html
@@ -69,7 +69,8 @@
     <div class="second">
         <p2>Contents</p2>
         <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - website designing<br><br>4 - photography</h2>
-        <div class="intro" style="background-image:url(cardark.png);"></div>      
+        <div class="intro" style="background-image:url(cardark.png);"></div>
+        <h3>phone backgrounds</h3>
     </div>
 
 
