--- a/hatom.html
+++ b/hatom.html
@@ -93,6 +93,26 @@
     <div class="third">
         <div class="car" style="background-image: url(hatompage3\ \(5\).png);"></div>           
     </div>
+    <div class="fourth">
+        <div class="car2" style="background-image: url(jkkljn.jpg);"></div>           
+    </div>
+
+    <div class="fifth">
+        <div class="container">
+            <div class="portfolio" style="background-image:url(new\ \(1\).jpeg);"></div>
+            <div class="portfolio" style="background-image:url(new\ \(2\).jpeg);"></div>
+            <div class="portfolio" style="background-image:url(new\ \(3\).jpeg);"></div>
+            <div class="portfolio" style="background-image:url(new\ \(4\).jpeg);"></div>
+        </div>
+        <div class="second">
+            <div class="container2">
+                <div class="portfolio2" style="background-image:url(new\ \(5\).jpeg);"></div>
+                <div class="portfolio2" style="background-image:url(new\ \(6\).jpeg);"></div>
+                <div class="portfolio2" style="background-image:url(new\ \(7\).jpeg);"></div>
+                <div class="portfolio2" style="background-image:url(esy.png);"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
