--- a/hatom.html
+++ b/hatom.html
@@ -111,7 +111,7 @@
                 <div class="portfolio2" style="background-image:url(new\ \(5\).jpeg);"></div>
                 <div class="portfolio2" style="background-image:url(new\ \(6\).jpeg);"></div>
                 <div class="portfolio2" style="background-image:url(new\ \(7\).jpeg);"></div>
-                <div class="portfolio2" style="background-image:url(esy.png);"></div>
+                <div class="portfolio2" style="background-image:url(IMG_4680.jpg);"></div>
             </div>
         </div>
     </div>
