--- a/hatom.html
+++ b/hatom.html
@@ -68,7 +68,7 @@
 
     <div class="second">
         <p2>Contents</p2>
-        <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - website designing<br><br>4 - photography</h2>
+        <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - website designing<br><br>4 - photography/digital art</h2>
         <div class="intro" style="background-image:url(cardark.png);"></div>
         <h3>phone backgrounds</h3>
     </div>
@@ -97,7 +97,7 @@
         <div class="car2" style="background-image: url(jkkljn.jpg);"></div>           
     </div>
 
-    <h4>photography</h4> 
+    <h4>photography/digital art</h4> 
 
     <div class="fifth">
         <div class="container">
