--- a/hatom.html
+++ b/hatom.html
@@ -68,7 +68,7 @@
 
     <div class="second">
         <p2>Contents</p2>
-        <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - website designing<br><br>4 - photography/digital art</h2>
+        <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - photography/digital art<br><br>4 - web designing</h2>
         <div class="intro" style="background-image:url(cardark.png);"></div>
         <h3>phone backgrounds</h3>
     </div>
@@ -88,6 +88,8 @@
             <div class="portfolio2" style="background-image:url(esy.png);"></div>
         </div>
     </div>
+
+    <h3>3D designing</h3>
 
 
     <div class="third">
