--- a/hatom.html
+++ b/hatom.html
@@ -114,6 +114,16 @@
             </div>
         </div>
     </div>
+
+    <h1>web designing</h1>
+    
+    <div class="sixth">
+        <div class="web" style="background-image: url(playx.png);"></div>           
+    </div>
+    <div class="sixth">
+        <div class="web" style="background-image: url(playx.png);"></div>           
+    </div>
+        
 </body>
 
 </html>
