--- a/hatom.html
+++ b/hatom.html
@@ -121,7 +121,7 @@
         <div class="web" style="background-image: url(playx.png);"></div>           
     </div>
     <div class="sixth">
-        <div class="web" style="background-image: url(playx.png);"></div>           
+        <div class="web" style="background-image: url(finalsite.png);"></div>           
     </div>
         
 </body>
