--- a/hatom.html
+++ b/hatom.html
@@ -59,7 +59,7 @@
 </svg>
  
         <div class="hatom-logo">
-            <div class="hatom-img" style="background-image:url(HATOMNEW.png);">
+            <div class="hatom-img" style="background-image:url(HATOMNEW1.png);">
         </div>  
         <div class="hatom-text">
             <div class="hatom-name" style="background-image:url(HatomText.png);"></div>
