--- a/hatom.html
+++ b/hatom.html
@@ -99,18 +99,18 @@
     <h4>photography/digital art</h4> 
 
     <div class="fifth">
-        <div class="container">
-            <div class="portfolio" style="background-image:url(new\ \(1\).jpeg);"></div>
-            <div class="portfolio" style="background-image:url(new\ \(2\).jpeg);"></div>
-            <div class="portfolio" style="background-image:url(new\ \(3\).jpeg);"></div>
-            <div class="portfolio" style="background-image:url(new\ \(4\).jpeg);"></div>
+        <div class="containernew">
+            <div class="portfolionew" style="background-image:url(new\ \(1\).jpeg);"></div>
+            <div class="portfolionew" style="background-image:url(new\ \(2\).jpeg);"></div>
+            <div class="portfolionew" style="background-image:url(new\ \(3\).jpeg);"></div>
+            <div class="portfolionew" style="background-image:url(new\ \(4\).jpeg);"></div>
         </div>
-        <div class="second">
-            <div class="container2">
-                <div class="portfolio2" style="background-image:url(new\ \(5\).jpeg);"></div>
-                <div class="portfolio2" style="background-image:url(new\ \(6\).jpeg);"></div>
-                <div class="portfolio2" style="background-image:url(new\ \(7\).jpeg);"></div>
-                <div class="portfolio2" style="background-image:url(IMG_4680.jpg);"></div>
+        <div class="secondnew">
+            <div class="container2new">
+                <div class="portfolio2new" style="background-image:url(new\ \(5\).jpeg);"></div>
+                <div class="portfolio2new" style="background-image:url(new\ \(6\).jpeg);"></div>
+                <div class="portfolio2new" style="background-image:url(new\ \(7\).jpeg);"></div>
+                <div class="portfolio2new" style="background-image:url(IMG_4680.jpg);"></div>
             </div>
         </div>
     </div>
