--- a/hatom.html
+++ b/hatom.html
@@ -67,9 +67,7 @@
     </div>
 
     <div class="second">
-        <p2>Contents</p2>
-        <h2>1 - phone backgrounds<br><br>2 - 3D designing<br><br>3 - photography/digital art<br><br>4 - web designing</h2>
-        <div class="intro" style="background-image:url(cardark.png);"></div>
+        <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
         <h3>phone backgrounds</h3>
     </div>
 
