--- a/hatom.html
+++ b/hatom.html
@@ -96,6 +96,10 @@
         
     <h4>photography/digital art</h4> 
 
+     <div class="sixth">
+        <div class="web" style="background-image: url(BNWHATOM.png);"></div>           
+    </div>
+
     <div class="fifth">
         <div class="container">
             <div class="portfolio" style="background-image:url(b&w\ \(1\).jpg);"></div>
