--- a/hatom.html
+++ b/hatom.html
@@ -97,7 +97,7 @@
     <h4>photography/digital art</h4> 
 
      <div class="sixth">
-        <div class="web" style="background-image: url(BNWHATOM.png);"></div>           
+        <div class="bnw" style="background-image: url(BNWHATOM.png);"></div>           
     </div>
 
     <div class="fifth">
