--- a/hatom.html
+++ b/hatom.html
@@ -96,23 +96,23 @@
         
     <h4>photography/digital art</h4> 
 
-     <div class="sixth">
+     <div class="pagebnw">
         <div class="bnw" style="background-image: url(BNWHATOM.png);"></div>           
     </div>
 
-    <div class="fifth">
-        <div class="container">
-            <div class="portfolio" style="background-image:url(b&w\ \(1\).jpg);"></div>
-            <div class="portfolio" style="background-image:url(b&w\ \(2\).jpg);"></div>
-            <div class="portfolio" style="background-image:url(b&w\ \(3\).jpg);"></div>
-            <div class="portfolio" style="background-image:url(b&w\ \(4\).jpg);"></div>
+    <div class="pagebnwall">
+        <div class="containerbnw">
+            <div class="portfoliobnw" style="background-image:url(b&w\ \(1\).jpg);"></div>
+            <div class="portfoliobnw" style="background-image:url(b&w\ \(2\).jpg);"></div>
+            <div class="portfoliobnw" style="background-image:url(b&w\ \(3\).jpg);"></div>
+            <div class="portfoliobnw" style="background-image:url(b&w\ \(4\).jpg);"></div>
         </div>
-        <div class="second">
-            <div class="container2">
-                <div class="portfolio2" style="background-image:url(b&w\ \(5\).jpg);"></div>
-                <div class="portfolio2" style="background-image:url(b&w\ \(6\).jpg);"></div>
-                <div class="portfolio2" style="background-image:url(b&w\ \(7\).jpg);"></div>
-                <div class="portfolio2" style="background-image:url(b&w\ \(8\).jpg);"></div>
+        <div class="pagebnwall2">
+            <div class="container2bnw">
+                <div class="portfolio2bnw" style="background-image:url(b&w\ \(5\).jpg);"></div>
+                <div class="portfolio2bnw" style="background-image:url(b&w\ \(6\).jpg);"></div>
+                <div class="portfolio2bnw" style="background-image:url(b&w\ \(7\).jpg);"></div>
+                <div class="portfolio2bnw" style="background-image:url(b&w\ \(8\).jpg);"></div>
             </div>
         </div>
     </div>
