--- a/hatom.html
+++ b/hatom.html
@@ -91,7 +91,7 @@
 
 
     <div class="third">
-        <div class="car" style="background-image: url(hatompage3\ \(5\).png);"></div>           
+        <div class="car" style="background-image: url(hatompage3.png);"></div>           
     </div>
         
     <h4>photography/digital art</h4> 
