--- a/hatom.html
+++ b/hatom.html
@@ -100,22 +100,14 @@
         <div class="bnw" style="background-image: url(B&WHATOM.png);"></div>           
     </div>
 
-    <div class="pagebnwall">
-        <div class="containerbnw">
-            <div class="portfoliobnw" style="background-image:url(b&w\ \(1\).jpg);"></div>
-            <div class="portfoliobnw" style="background-image:url(b&w\ \(2\).jpg);"></div>
-            <div class="portfoliobnw" style="background-image:url(b&w\ \(3\).jpg);"></div>
-            <div class="portfoliobnw" style="background-image:url(b&w\ \(4\).jpg);"></div>
-        </div>
-        <div class="pagebnwall2">
-            <div class="container2bnw">
-                <div class="portfolio2bnw" style="background-image:url(b&w\ \(5\).jpg);"></div>
-                <div class="portfolio2bnw" style="background-image:url(b&w\ \(6\).jpg);"></div>
-                <div class="portfolio2bnw" style="background-image:url(b&w\ \(7\).jpg);"></div>
-                <div class="portfolio2bnw" style="background-image:url(b&w\ \(8\).jpg);"></div>
-            </div>
-        </div>
+    <div class="pageorg">
+        <div class="org" style="background-image: url(B&WHATOM.png);"></div>           
     </div>
+
+    <div class="pageedt">
+        <div class="edt" style="background-image: url(B&WHATOM.png);"></div>           
+    </div>
+
 
     <h1>web designing</h1>
     
