--- a/hatom.html
+++ b/hatom.html
@@ -105,7 +105,7 @@
     </div>
 
     <div class="pageedt">
-        <div class="edt" style="background-image: url(B&WHATOM.png);"></div>           
+        <div class="edt" style="background-image: url(EDT.png);"></div>           
     </div>
 
 
