--- a/hatom.html
+++ b/hatom.html
@@ -101,7 +101,7 @@
     </div>
 
     <div class="pageorg">
-        <div class="org" style="background-image: url(B&WHATOM.png);"></div>           
+        <div class="org" style="background-image: url(ORG.png);"></div>           
     </div>
 
     <div class="pageedt">
