--- a/hatom.html
+++ b/hatom.html
@@ -100,8 +100,8 @@
     <div id="3D DESIGNING"><a href="3D DESIGNING"></a>
         <div class="third">
             <div class="car" style="background-image: url(hatompage3.png);"></div>
-            <div class="gas" style="background-image: url(side1.png);"></div>
-            <div class="side" style="background-image: url(broombroom.png);"></div>               
+            <div class="gas" style="background-image: url(broombroom.png);"></div>
+            <div class="side" style="background-image: url(side1.png);"></div>               
         </div>
     </div>
         
