--- a/hatom.html
+++ b/hatom.html
@@ -66,14 +66,16 @@
         </div>
     </div>
 
-    <div class="second">
-        <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS</a>
-        <a href="#3D DESIGNING">3D DESIGNING</a>
-        <a href="#PHOTOGRAPHY">PHOTOGRAPHY</a>
-        <a href="#WEB DESIGNING">WEB DESIGNING</a>
-        <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT</a>
-        <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
-        <h3>phone backgrounds</h3>
+    <div id="second"><a href="second"></a>
+        <div class="second">
+            <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS</a>
+            <a href="#3D DESIGNING">3D DESIGNING</a>
+            <a href="#PHOTOGRAPHY">PHOTOGRAPHY</a>
+            <a href="#WEB DESIGNING">WEB DESIGNING</a>
+            <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT</a>
+            <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
+            <h3>phone backgrounds</h3>
+        </div>
     </div>
 
 
