--- a/hatom.html
+++ b/hatom.html
@@ -103,7 +103,7 @@
         <div class="third">
             <div class="car" style="background-image: url(hatompage3.png);"></div>
             <div class="gas" style="background-image: url(broombroom.png);"></div>
-            <div class="side" style="background-image: url(side1.png);"></div>               
+            <div class="side" style="background-image: url(sideView.png);"></div>               
         </div>
     </div>
         
