--- a/hatom.html
+++ b/hatom.html
@@ -74,12 +74,12 @@
             <a href="#WEB DESIGNING">WEB DESIGNING</a>
             <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT</a>
             <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
-            <h3>phone backgrounds</h3>
         </div>
     </div>
 
 
     <div id="PHONE BACKGROUNDS"><a href="PHONE BACKGROUNDS"></a>
+        <div class="pbg" style="background-image: url(pbg.png);"></div>
         <div class="container">
             <div class="portfolio" style="background-image:url(HATOM\ \(1\).png);"></div>
             <div class="portfolio" style="background-image:url(HATOM\ \(3\).png);"></div>
@@ -107,9 +107,8 @@
         </div>
     </div>
         
-    <h4>photography/digital art</h4> 
-
      <div id="PHOTOGRAPHY"><a href="PHOTOGRAPHY"></a>
+        <div class="pnd" style="background-image: url(pnd.png);"></div>
         <div class="pagebnw">
             <div class="bnw" style="background-image: url(B&WHATOM.png);"></div>           
         </div>
