--- a/hatom.html
+++ b/hatom.html
@@ -100,6 +100,7 @@
 
 
     <div id="3D DESIGNING"><a href="3D DESIGNING"></a>
+        <div class="ddd" style="background-image: url(3dd.png);"></div>
         <div class="third">
             <div class="car" style="background-image: url(hatompage3.png);"></div>
             <div class="gas" style="background-image: url(broombroom.png);"></div>
@@ -121,11 +122,9 @@
             <div class="edt" style="background-image: url(EDT.png);"></div>           
         </div>
     </div>
-
-
-    <h1>web designing</h1>
     
     <div id="WEB DESIGNING"><a href="WEB DESIGNING"></a>
+        <div class="web" style="background-image: url(web.png);"></div>
         <div class="sixth">
             <div class="web" style="background-image: url(playx.png);"></div>           
         </div>
