--- a/hatom.html
+++ b/hatom.html
@@ -130,7 +130,7 @@
         </div>
     </div>
 
-    <a href="#second" class="button">Back to Content</a>
+    <a href="#second" class="button">&#8593;</a>
         
 </body>
 
