--- a/hatom.html
+++ b/hatom.html
@@ -123,10 +123,10 @@
     <div id="WEB DESIGNING"><a href="WEB DESIGNING"></a>
         <div class="web" style="background-image: url(web.png);"></div>
         <div class="sixth">
-            <div class="web" style="background-image: url(playx.png);"></div>           
+            <div class="web1" style="background-image: url(playx.png);"></div>           
         </div>
         <div class="sixth">
-            <div class="web" style="background-image: url(finalsite.png);"></div>           
+            <div class="web1" style="background-image: url(finalsite.png);"></div>           
         </div>
     </div>
 
