--- a/hatom.html
+++ b/hatom.html
@@ -70,7 +70,7 @@
         <div class="second">
             <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS</a>
             <a href="#3D DESIGNING">3D DESIGNING</a>
-            <a href="#PHOTOGRAPHY">PHOTOGRAPHY</a>
+            <a href="#PHOTOGRAPHY">PHOTOGRAPHY-3D DESIGNING</a>
             <a href="#WEB DESIGNING">WEB DESIGNING</a>
             <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT</a>
             <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
