--- a/hatom.html
+++ b/hatom.html
@@ -68,11 +68,11 @@
 
     <div id="second"><a href="second"></a>
         <div class="second">
-            <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS</a>
-            <a href="#3D DESIGNING">3D DESIGNING</a>
-            <a href="#PHOTOGRAPHY">PHOTOGRAPHY-3D DESIGNING</a>
-            <a href="#WEB DESIGNING">WEB DESIGNING</a>
-            <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT</a>
+            <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS<br></a>
+            <a href="#3D DESIGNING">3D DESIGNING<br></a>
+            <a href="#PHOTOGRAPHY">PHOTOGRAPHY-3D DESIGNING<br></a>
+            <a href="#WEB DESIGNING">WEB DESIGNING<br></a>
+            <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT<br></a>
             <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
         </div>
     </div>
