--- a/hatom.html
+++ b/hatom.html
@@ -70,7 +70,7 @@
         <div class="second">
             <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS<br></a>
             <a href="#3D DESIGNING">3D DESIGNING<br></a>
-            <a href="#PHOTOGRAPHY">PHOTOGRAPHY-3D DESIGNING<br></a>
+            <a href="#PHOTOGRAPHY">PHOTOGRAPHY-DIGITAL ART<br></a>
             <a href="#WEB DESIGNING">WEB DESIGNING<br></a>
             <a href="#GAME DEVELOPMENT">GAME DEVELOPMENT<br></a>
             <div class="intro" style="background-image:url(CONTENTSHATOM.png);"></div>
