--- a/hatom.html
+++ b/hatom.html
@@ -66,6 +66,8 @@
         </div>
     </div>
 
+    <div class="context" style="background-image: url(context.png);"></div>
+
     <div id="second"><a href="second"></a>
         <div class="second">
             <a href="#PHONE BACKGROUNDS">PHONE BACKGROUNDS<br></a>
