--- a/hatom.html
+++ b/hatom.html
@@ -131,6 +131,12 @@
         <div class="sixth">
             <div class="web1" style="background-image: url(finalsite.png);"></div>           
         </div>
+        <div class="sixth">
+            <div class="web1" style="background-image: url(aoz.png);"></div>           
+        </div>
+        <div class="sixth">
+            <div class="web1" style="background-image: url(ef.png);"></div>           
+        </div>
     </div>
 
     <a href="#second" class="button">&#8593;</a>
