--- a/hatom.html
+++ b/hatom.html
@@ -129,13 +129,10 @@
             <div class="web1" style="background-image: url(playx.png);"></div>           
         </div>
         <div class="sixth">
-            <div class="web1" style="background-image: url(finalsite.png);"></div>           
-        </div>
-        <div class="sixth">
-            <div class="web1" style="background-image: url(aoz.png);"></div>           
-        </div>
-        <div class="sixth">
             <div class="web1" style="background-image: url(ef.png);"></div>           
+        </div>
+        <div class="sixth">
+            <div class="web1" style="background-image: url(photosite.png);"></div>           
         </div>
     </div>
 
