--- a/hatom.html
+++ b/hatom.html
@@ -134,6 +134,9 @@
         <div class="sixth">
             <div class="web1" style="background-image: url(photosite.png);"></div>           
         </div>
+        <div class="sixth">
+            <div class="web1" style="background-image: url(photosite1.png);"></div>           
+        </div>
     </div>
 
     <a href="#second" class="button">&#8593;</a>
