--- a/hatom.html
+++ b/hatom.html
@@ -136,11 +136,10 @@
         <div class="sixth">
             <div class="web1" style="background-image: url(photosite1.png);"></div>           
         </div>
+        <h1>Made with ❤️ for Hatom</h1>
     </div>
 
     <a href="#second" class="button">&#8593;</a>
-
-    <p>Made with love for Hatom</p>
         
 </body>
 
