--- a/hatom.html
+++ b/hatom.html
@@ -68,6 +68,7 @@
     </div>
 
     <div class="context" style="background-image: url(context.png);"></div>
+    <div class="context" style="background-image: url(cover_letter.png);"></div>
 
     <div id="second"><a href="second"></a>
         <div class="second">
